started the responsive boxes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header class="grid-con" id="main-header">
-        <div class="box2 col-start-1 col-end-2 m-col-start-1 m-col-end-2" id="logo"></div>
+        <nav class="box col-span-full" id="nav"></nav>
+        <div class="box2 xl-col-start-2 xl-col-end-3 l-col-start-2 l-col-end-3 m-col-start-2 m-col-end-3 " id="logo"></div>
         <nav></nav>
     </header>
 </body>
