--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 <body>
     <header class="grid-con" id="main-header">
         <nav class="box col-span-full" id="nav"></nav>
-        <div class="box2 xl-col-start-2 xl-col-end-3 l-col-start-2 l-col-end-3 m-col-start-2 m-col-end-3 " id="logo"></div>
-        <nav></nav>
+        <div class="box2 col-start-1 col-end-2 xl-col-start-2 xl-col-end-3 m-col-start-2 m-col-end-3 " id="logo"></div>
+        <div class="box2 col-start-3 col-end-4 xl-col-start-10 xl-col-end-12"></div>
     </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
