--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- in mobile set initial zoom level of page to 100%, set site size to equal device width not a larger canvas that is shrunk down-->
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
-    <title>HarmoniGuitars</title>
+    <title>Apple Grace Gesalan</title>
     <!-- Link to reset or normalize before main.css
     only choose one -->
     <link href="css/grid.css" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1 class="hidden">Grace Gesalan</h1>
+    <h1 class="hidden">Apple Grace Gesalan</h1>
     <header id="main-header" class="grid-con">
         <div class="box col-start-1 col-end-2" id="logo">
         </div>
