--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
         </section>
     </main>
     <footer class="grid-con">
-        
+        <h2 class="hidden">Footer</h2>
+        <div class="box col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" id="footerlogo">Logo</div>
+        <div class="box col-span-full m-col-start-5 m-col-end-9 xl-col-start-5 xl-col-end-9">Grace Gesalan</div>
+        <div class="box col-span-full m-col-start-5 m-col-end-9 xl-col-start-5 xl-col-end-9">2023 Rights</div>
     </footer>
 
     <script src="js/main.js"></script>
