--- a/index.html
+++ b/index.html
@@ -28,28 +28,27 @@
             </div>
             <div id="caption" class="box col-span-full m-col-start-7 m-col-end-12 xl-col-start-7 xl-col-end-12" >
                <p>
-                Let's build a page that speaks to your brand and 
-                attract your target audience. 
+                Let's build a page that speaks to your brand and attract your target audience. 
                </p>
             </div>
 
-            <div class="box col-start-1 col-end-3 m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-4" id="download">Download CV</div>
-            <div class="box col-start-3 col-end-5 m-col-start-4 m-col-end-6 xl-col-start-4 xl-col-end-6" id="meeting">Book a Meeting</div>
+            <div class="box col-start-1 col-end-3 m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-4" id="download">CV</div>
+            <div class="box col-start-3 col-end-5 m-col-start-4 m-col-end-6 xl-col-start-4 xl-col-end-6" id="meeting">Meeting</div>
         </section>
 
         <section id="gallery" class="grid-con">
             <h2 class="hidden">Artistry Vault</h2>
             <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="vault">Artistry Vault</div>
             <div class="box col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal1">
-                <div class="box2 col-start-2 col-end-3 m-col-start-3 m-col-end-6 xl-col-start-3 xl-col-end-6" id="text1"></div>
+                <div class="box2" id="text1"></div>
             </div>
 
             <div class="box col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal2">
-                <div class="box2 col-start-2 col-end-3 m-col-start-3 m-col-end-6 xl-col-start-3 xl-col-end-6" id="text2"></div>
+                <div class="box2" id="text2"></div>
             </div>
 
             <div class="box col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal3">
-                <div class="box2 col-start-2 col-end-3 m-col-start-3 m-col-end-6 xl-col-start-3 xl-col-end-6" id="text2"></div>
+                <div class="box2" id="text3"></div>
             </div>
         </section>
 
