updated the header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>    
     <header id="main-header" class="grid-con">
         <h1 class="hidden">Apple Grace Gesalan</h1>
-        <div class="box col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo"></div>
+        <img src="images/logo_bw.svg" class="col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo">
+        <!-- <div class="box col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo"></div> -->
         <div class="box m-col-start-3 m-col-end-6 xl-col-start-3 xl-col-end-6" id="name"></div>
         <div class="box m-col-start-10 m-col-end-11 xl-col-start-10 xl-col-end-11" id="portfolionav"></div>
         <div class="box m-col-start-11 m-col-end-12 xl-col-start-11 xl-col-end-12" id="contactnav"></div>
@@ -69,8 +70,8 @@
     <footer class="grid-con">
         <h2 class="hidden">Footer</h2>
         <div class="box col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" id="footerlogo">Logo</div>
-        <div class="box col-span-full m-col-start-5 m-col-end-9 xl-col-start-5 xl-col-end-9">Grace Gesalan</div>
-        <div class="box col-span-full m-col-start-5 m-col-end-9 xl-col-start-5 xl-col-end-9">2023 Rights</div>
+        <div class="box col-span-full m-col-start-5 m-col-end-9 xl-col-start-5 xl-col-end-9" id="footername">Grace Gesalan</div>
+        <div class="box col-span-full m-col-start-5 m-col-end-9 xl-col-start-5 xl-col-end-9" id="footerrights">2023 Rights</div>
     </footer>
 
     <script src="js/main.js"></script>
