--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="hidden">Apple Grace Gesalan</h1>
         <img src="images/logo_bw.svg" class="col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo">
         <!-- <div class="box col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo"></div> -->
-        <div class="box m-col-start-3 m-col-end-6 xl-col-start-3 xl-col-end-6" id="name"></div>
+        <div class="box m-col-start-3 m-col-end-6 xl-col-start-3 xl-col-end-6" id="name">Name</div>
         <div class="box m-col-start-10 m-col-end-11 xl-col-start-10 xl-col-end-11" id="portfolionav"></div>
         <div class="box m-col-start-11 m-col-end-12 xl-col-start-11 xl-col-end-12" id="contactnav"></div>
         <div class="box col-start-4 col-end-5" id="burger"></div>
