--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
             </div>
             <div id="caption" class="box col-span-full m-col-start-7 m-col-end-12 xl-col-start-7 xl-col-end-12" >
                <p>
-                Let's build a page that speaks to your brand and attract your target audience. 
+                Let's build a page that speaks to your brand and 
+                attract your target audience. I specialize in 
+                Web Design and Front End Development
                </p>
             </div>
 
-            <div class="box col-start-1 col-end-3 m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-4" id="download">CV</div>
-            <div class="box col-start-3 col-end-5 m-col-start-4 m-col-end-6 xl-col-start-4 xl-col-end-6" id="meeting">Meeting</div>
+            <div class="box col-start-1 col-end-3 m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-4" id="download">Download CV</div>
+            <div class="box col-start-3 col-end-5 m-col-start-4 m-col-end-6 xl-col-start-4 xl-col-end-6" id="meeting">Book a Meeting</div>
         </section>
 
         <section id="gallery" class="grid-con">
