--- a/index.html
+++ b/index.html
@@ -55,29 +55,47 @@
         <section id="gallery" class="grid-con">
             <h2 class="hidden">Artistry Vault</h2>
             <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="vault">Artistry Vault</div>
-            <div class="box col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal1">
-                <div class="box2" id="text1"></div>
+            <div class="box3 col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal1">
+                <div class="box2" id="text1">Swerve Rebrand</div>
             </div>
 
-            <div class="box col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal2">
-                <div class="box2" id="text2"></div>
+            <div class="box3 col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal2">
+                <div class="box2" id="text2">Comfort Room System</div>
             </div>
 
-            <div class="box col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal3">
-                <div class="box2" id="text3"></div>
+            <div class="box3 col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal3">
+                <div class="box2" id="text3">Lera Rebrand</div>
             </div>
         </section>
 
         <section id="slogan" class="grid-con">
             <h2 class="hidden">Building Tomorrow</h2>
-            <div class="box col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="dedication">Building Tomorrow with Unyielding Dedication</div>
+            <div class="box col-span-full m-col-start-3 m-col-end-10 xl-col-start-3 xl-col-end-10" id="dedication">Building Tomorrow with Unyielding Dedication</div>
         </section>
 
         <section id="insights" class="grid-con">
             <h2 class="hidden">Insights About Me</h2>
             <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="about">Insights About Me</div>
-            <div class="box col-span-full m-col-start-2 m-col-end-6 xl-col-start-2 xl-col-end-6" id="myphoto">My Photo</div>
-            <div class="box col-span-full m-col-start-6 m-col-end-12 xl-col-start-6 xl-col-end-12" id="mycap">My Description</div>
+            <div class="box3 col-span-full m-col-start-2 m-col-end-6 xl-col-start-2 xl-col-end-6" id="myphoto">My Photo</div>
+            <div class="box col-span-full m-col-start-6 m-col-end-12 xl-col-start-6 xl-col-end-12" id="mycap">
+                <p>Proudly part of the House of Bhon, I'm one of the 
+                    brains behind the designs, the creative wizard in the 
+                    mix. They say I'm dedicated, but between you and me, 
+                    my creative juices flow best with a cup of coffee in hand.
+                </p>
+                <p>
+                    My internship days at Acquia were a thrilling rollercoaster 
+                    ride, packed with ups and downs. Yet, in the end, I 
+                    emerged with a treasure trove of fantastic experiences, 
+                    all thanks to the support of an inspiring group of peers.
+                </p>
+                <p>
+                    I strive to bring dedication and creativity to every project, 
+                    with the goal of crafting something remarkable each time. 
+                    Whether I'm designing or innovating, I'm committed to 
+                    delivering excellence.
+                </p>
+            </div>
             <div class="box col-span-full m-col-start-3 m-col-end-11 xl-col-start-3 xl-col-end-11" id="socials">Socials and Print Shop</div>
             <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="icons">Social Icons</div>
         </section>
