updated the insights section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
                 </p>
             </div>
             <div class="box col-span-full m-col-start-3 m-col-end-11 xl-col-start-3 xl-col-end-11" id="socials">Socials and Print Shop</div>
-            <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="icons">Social Icons</div>
+            <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="icons">
+                <img src="images/linkedin.svg" alt="linkedin icon">
+                <img src="images/instagram.svg" alt="instagram icon">
+                <img src="images/github.svg" alt="github icon">
+                <img src="images//youtube.svg" alt="youtube icon">
+                <img src="images/darkroom.svg" alt="darkroom icon">
+            </div>
         </section>
     </main>
     <footer class="grid-con">
