--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
     </main>
     <footer class="grid-con">
         <h2 class="hidden">Footer</h2>
-        <div class="box col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" id="footerlogo">Logo</div>
+        <div class="box3 col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" id="footerlogo">Logo</div>
         <div class="box col-span-full m-col-start-5 m-col-end-9 xl-col-start-5 xl-col-end-9" id="footername">Grace Gesalan</div>
-        <div class="box col-span-full m-col-start-5 m-col-end-9 xl-col-start-5 xl-col-end-9" id="footerrights">2023 Rights</div>
+        <div class="box col-span-full m-col-start-2 m-col-end-12 xl-col-start-5 xl-col-end-9" id="footerrights">© 2023All Rights Reserved. Design & Coded with Caffeine and Beats</div>
     </footer>
 
     
