added links to icons

--- a/index.html
+++ b/index.html
@@ -98,11 +98,21 @@
             </div>
             <div class="box col-span-full m-col-start-3 m-col-end-11 xl-col-start-3 xl-col-end-11" id="socials">Socials and Print Shop</div>
             <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="icons">
-                <img src="images/linkedin.svg" alt="linkedin icon">
-                <img src="images/instagram.svg" alt="instagram icon">
-                <img src="images/github.svg" alt="github icon">
-                <img src="images//youtube.svg" alt="youtube icon">
-                <img src="images/darkroom.svg" alt="darkroom icon">
+                <a href="https://www.linkedin.com/in/apple-grace-gesalan-8135881b7/">
+                    <img src="images/linkedin.svg" alt="linkedin icon">
+                </a>
+                <a href="https://www.instagram.com/gracegesalan/?theme=dark">
+                    <img src="images/instagram.svg" alt="instagram icon">
+                </a>
+                <a href="https://github.com/gracegesalan">
+                    <img src="images/github.svg" alt="github icon">
+                </a>
+                <a href="https://www.youtube.com/@gracegesalan5450">
+                    <img src="images//youtube.svg" alt="youtube icon">
+                </a>
+                <a href="https://gracegesalan.darkroom.com/">
+                    <img src="images/darkroom.svg" alt="darkroom icon">
+                </a>
             </div>
         </section>
     </main>
