--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>    
     <header id="main-header" class="grid-con">
         <h1 class="hidden">Apple Grace Gesalan</h1>
-        <img src="images/logo_bw.svg" class="col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo">
+        <img src="images/logo.svg" class="col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo">
         <!-- <div class="box col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo"></div> -->
         <div class="m-col-start-3 m-col-end-9 xl-col-start-3 xl-col-end-6" id="name">
             <h2>Grace Gesalan | Canada</h2>
@@ -37,10 +37,10 @@
         
         <section id="hero-con" class="grid-con">
             <h2 class="hidden">Hero Section</h2>
-            <div id="position" class="box col-span-full m-col-start-2 m-col-end-6 xl-col-start-2 xl-col-end-6">
-                <h3>Digital Designer</h3>
+            <div id="position" class="col-span-full m-col-start-2 m-col-end-6 xl-col-start-2 xl-col-end-6">
+                <h3><span id="digital">Digital</span> Designer</h3>
             </div>
-            <div id="caption" class="box col-span-full m-col-start-7 m-col-end-12 xl-col-start-7 xl-col-end-12" >
+            <div id="caption" class="col-span-full m-col-start-7 m-col-end-12 xl-col-start-7 xl-col-end-12" >
                <p>
                 Let's build a page that speaks to your brand and 
                 attract your target audience. I specialize in 
@@ -48,8 +48,8 @@
                </p>
             </div>
 
-            <div class="box col-start-1 col-end-3 m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-4" id="download">Download CV</div>
-            <div class="box col-start-3 col-end-5 m-col-start-4 m-col-end-6 xl-col-start-4 xl-col-end-6" id="meeting">Book a Meeting</div>
+            <button class="box col-start-1 col-end-3 m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-4" id="download">Download CV</button>
+            <button class="box col-start-3 col-end-5 m-col-start-4 m-col-end-6 xl-col-start-4 xl-col-end-6" id="meeting">Book a Meeting</button>
         </section>
 
         <section id="gallery" class="grid-con">
