updated the style

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p><a href="#gallery">Portfolio</a></p>
         </div>
         <div class="m-col-start-11 m-col-end-12 xl-col-start-11 xl-col-end-12" id="contactnav">
-            <p>Contact</p>
+            <p><a>Contact</a></p>
         </div>
         <div class="box col-start-4 col-end-5" id="burger"></div>
     </header>
@@ -37,7 +37,7 @@
         
         <section id="hero-con" class="grid-con">
             <h2 class="hidden">Hero Section</h2>
-            <div id="position" class="col-span-full m-col-start-2 m-col-end-6 xl-col-start-2 xl-col-end-6">
+            <div id="position" class="col-span-full m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-6">
                 <h3><span id="digital">Digital</span> Designer</h3>
             </div>
             <div id="caption" class="col-span-full m-col-start-7 m-col-end-12 xl-col-start-7 xl-col-end-12" >
