--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=KoHo&family=Montserrat:wght@300&family=Ovo&family=Raleway&family=Yeseva+One&display=swap" rel="stylesheet">
 
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
 
     <link href="css/grid.css" rel="stylesheet">
@@ -24,12 +26,16 @@
         <div class="m-col-start-3 m-col-end-9 xl-col-start-3 xl-col-end-6" id="name">
             <h2>Grace Gesalan | Canada</h2>
         </div>
+        <div class="m-col-start-7 m-col-end-9 xl-col-start-9 xl-col-end-10" id="about">
+            <p><a>About</a></p>
+        </div>
         <div class="m-col-start-9 m-col-end-11 xl-col-start-10 xl-col-end-11" id="portfolionav">
             <p><a href="#gallery">Portfolio</a></p>
         </div>
         <div class="m-col-start-11 m-col-end-12 xl-col-start-11 xl-col-end-12" id="contactnav">
             <p><a>Contact</a></p>
         </div>
+        
         <img src="images/burger.svg" class="col-start-4 col-end-5" id="burger">
     </header>
     <main>
@@ -53,7 +59,7 @@
 
         <section id="gallery" class="grid-con">
             <h2 class="hidden">Artistry Vault</h2>
-            <div class="col-span-full m-col-start-5 m-col-end-10 xl-col-start-5 xl-col-end-10" id="vault">My Artistry Vault</div>
+            <div class="col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="vault">My Artistry Vault</div>
             
             <div class="col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10 text1" >Saba Earbuds</div>
             <div class="col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal1">
@@ -109,14 +115,23 @@
 
         <section id="slogan" class="grid-con">
             <h2 class="hidden">Building Tomorrow</h2>
-            <div class="box col-span-full m-col-start-3 m-col-end-10 xl-col-start-3 xl-col-end-10" id="dedication">Building Tomorrow with Unyielding Dedication</div>
+            <div class="col-span-full m-col-start-3 m-col-end-10 xl-col-start-2 xl-col-end-11" id="dedication">BUILDING TOMORROW WITH UNYIELDING DEDICATION</div>
         </section>
 
         <section id="insights" class="grid-con">
             <h2 class="hidden">Insights About Me</h2>
-            <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="about">Insights About Me</div>
-            <div class="box3 col-span-full m-col-start-2 m-col-end-6 xl-col-start-2 xl-col-end-6" id="myphoto">My Photo</div>
-            <div class="box col-span-full m-col-start-6 m-col-end-12 xl-col-start-6 xl-col-end-12" id="mycap">
+            <div class="col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="about">Insights About Me</div>
+            <div class="col-span-full m-col-start-2 m-col-end-6 xl-col-start-2 xl-col-end-6" id="myphoto">
+                <img
+                sizes="(max-width: 1920px) 100vw, 1920px"
+                srcset="
+                images/grace_wl6daa_c_scale,w_325.jpg 325w,
+                images/grace_wl6daa_c_scale,w_865.jpg 865w,
+                images/grace_wl6daa_c_scale,w_1148.jpg 1148w,
+                images/grace_wl6daa_c_scale,w_1920.jpg 1920w"
+                alt="A Photo of Me">
+            </div>
+            <div class="col-span-full m-col-start-6 m-col-end-12 xl-col-start-6 xl-col-end-12" id="mycap">
                 <p>Proudly part of the House of Bhon, I'm one of the 
                     brains behind the designs, the creative wizard in the 
                     mix. They say I'm dedicated, but between you and me, 
@@ -135,8 +150,8 @@
                     delivering excellence.
                 </p>
             </div>
-            <div class="box col-span-full m-col-start-3 m-col-end-11 xl-col-start-3 xl-col-end-11" id="socials">Socials and Print Shop</div>
-            <div class="box col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="icons">
+            <div class="col-span-full m-col-start-3 m-col-end-11 xl-col-start-4 xl-col-end-11" id="socials">Socials and Print Shop</div>
+            <div class="col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="icons">
                 <a href="https://www.linkedin.com/in/apple-grace-gesalan-8135881b7/">
                     <img src="images/linkedin.svg" alt="linkedin icon">
                 </a>
