--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 images/grace_wl6daa_c_scale,w_865.jpg 865w,
                 images/grace_wl6daa_c_scale,w_1148.jpg 1148w,
                 images/grace_wl6daa_c_scale,w_1920.jpg 1920w"
-                alt="A Photo of Me">
+                alt="">
             </div>
             <div class="col-span-full m-col-start-6 m-col-end-12 xl-col-start-6 xl-col-end-12" id="mycap">
                 <p>Proudly part of the House of Bhon, I'm one of the 
