added and updated the page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apple Grace Gesalan</title>
+    <title>Apple Grace Gesalan Portfolio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
             <h2>Grace Gesalan | Canada</h2>
         </div>
         <div class="m-col-start-9 m-col-end-10 xl-col-start-9 xl-col-end-10" id="about">
-            <p><a>About</a></p>
+            <p><a href="about.html" id="aboutlink">About</a></p>
         </div>
         <div class="m-col-start-10 m-col-end-11 xl-col-start-10 xl-col-end-11" id="portfolionav">
             <p><a href="#gallery">Portfolio</a></p>
@@ -129,7 +129,7 @@
                 images/grace_wl6daa_c_scale,w_865.jpg 865w,
                 images/grace_wl6daa_c_scale,w_1148.jpg 1148w,
                 images/grace_wl6daa_c_scale,w_1920.jpg 1920w"
-                alt="">
+                alt="Photo of Me">
             </div>
             <div class="col-span-full m-col-start-6 m-col-end-12 xl-col-start-6 xl-col-end-12" id="mycap">
                 <p>Proudly part of the House of Bhon, I'm one of the 
@@ -151,7 +151,7 @@
                 </p>
             </div>
             <div class="col-span-full m-col-start-4 m-col-end-11 xl-col-start-4 xl-col-end-11" id="socials">Socials and Print Shop</div>
-            <div class="col-span-full m-col-start-5 m-col-end-10 xl-col-start-4 xl-col-end-10" id="icons">
+            <div class="col-span-full m-col-start-5 m-col-end-10 xl-col-start-5 xl-col-end-10" id="icons">
                 <a href="https://www.linkedin.com/in/apple-grace-gesalan-8135881b7/">
                     <img src="images/linkedin.svg" alt="linkedin icon">
                 </a>
