--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                </p>
             </div>
 
-            <button class="box col-start-1 col-end-3 m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-4" id="download">Download CV</button>
-            <button class="box col-start-3 col-end-5 m-col-start-4 m-col-end-6 xl-col-start-4 xl-col-end-6" id="meeting">Book a Meeting</button>
+            <button class="col-start-1 col-end-3 m-col-start-2 m-col-end-4 xl-col-start-2 xl-col-end-4" id="download">Download CV</button>
+            <button class="col-start-3 col-end-5 m-col-start-4 m-col-end-6 xl-col-start-4 xl-col-end-6" id="meeting">Book a Meeting</button>
         </section>
 
         <section id="gallery" class="grid-con">
@@ -132,15 +132,13 @@
                 alt="Photo of Me">
             </div>
             <div class="col-span-full m-col-start-6 m-col-end-12 xl-col-start-6 xl-col-end-12" id="mycap">
-                <p>Proudly part of the House of Bhon, I'm one of the 
-                    brains behind the designs, the creative wizard in the 
-                    mix. They say I'm dedicated, but between you and me, 
+                <p>Proudly part of the House of Bhon, They say I'm dedicated, but between you and me, 
                     my creative juices flow best with a cup of coffee in hand.
                 </p>
                 <p>
                     My internship days at Acquia were a thrilling rollercoaster 
                     ride, packed with ups and downs. Yet, in the end, I 
-                    emerged with a treasure trove of fantastic experiences, 
+                    treasure trove of fantastic experiences, 
                     all thanks to the support of an inspiring group of peers.
                 </p>
                 <p>
@@ -150,6 +148,7 @@
                     delivering excellence.
                 </p>
             </div>
+            <button class="col-start-1 col-end-3 m-col-start-6 m-col-end-8 xl-col-start-6 xl-col-end-8" id="curious"><a href="about.html">Now I'm Curious</a></button>
             <div class="col-span-full m-col-start-4 m-col-end-11 xl-col-start-4 xl-col-end-11" id="socials">Socials and Print Shop</div>
             <div class="col-span-full m-col-start-5 m-col-end-10 xl-col-start-5 xl-col-end-10" id="icons">
                 <a href="https://www.linkedin.com/in/apple-grace-gesalan-8135881b7/">
