--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=KoHo&family=Montserrat:wght@300&family=Ovo&family=Raleway&family=Yeseva+One&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
@@ -20,7 +22,10 @@
 <body>
     <header id="main-header" class="grid-con">
         <h1 class="hidden">Apple Grace Gesalan</h1>
-        <img src="images/logo.svg" class="col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo">
+
+        <a href="index.html" class="col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3">
+            <img src="images/logo.svg"  id="logo">
+        </a>
         <div class="m-col-start-3 m-col-end-9 xl-col-start-3 xl-col-end-6" id="name">
             <h2>Grace Gesalan | Canada</h2>
         </div>
@@ -28,10 +33,10 @@
             <p><a>About</a></p>
         </div>
         <div class="m-col-start-10 m-col-end-11 xl-col-start-10 xl-col-end-11" id="portfolionav">
-            <p><a href="#gallery">Portfolio</a></p>
+            <p><a href="index.html">Portfolio</a></p>
         </div>
         <div class="m-col-start-11 m-col-end-12 xl-col-start-11 xl-col-end-12" id="contactnav">
-            <p><a>Contact</a></p>
+            <p><a href="contact.html" id="contactlink">Contact</a></p>
         </div>
         
         <img src="images/burger.svg" class="col-start-4 col-end-5" id="burger">
@@ -77,19 +82,41 @@
             <div class="col-span-full xl-col-start-2 xl-col-end-9 m-col-start-2 m-col-end-9" id="thereel">
                 <h3><a id="theproject">PROJECT</a>REEL</h3>
             </div>
+
             <div class="col-span-full xl-col-start-2 xl-col-end-12 m-col-start-2 m-col-end-12" id="thevideo">
                 <video controls>
                     <source src="images/demo_reel.mp4" type="video/mp4">
                 </video>
+                <div class="videocontrols hidden" id="videocontrols">
+
+                    <button id="playbutton">
+                        <i class="fa fa-play-circle-o"></i>
+                    </button>
+
+                    <button id="pausebutton">
+                        <i class="fa fa-pause-circle-o"></i>
+                    </button>
+
+                    <button id="stopbutton">
+                        <i class="fa fa-stop-circle-o"></i>
+                    </button>
+
+                    <i class="fa fa-volume-up"></i>
+                    <input type="range" id="changevol" step="0.05" min="0" max="1" value="1">
+                    
+                </div>
             </div>
         </section>
 
     </main>
     <footer class="grid-con" id="footer">
         <h2 class="hidden">Footer</h2>
-        <div class="col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" id="footerlogo">
-            <img src="images/logo.svg"></image>
-        </div>
+
+        <a href="#main-header" class="col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" >
+            <div id="footerlogo">
+                <img src="images/logo.svg"></image>
+            </div>
+        </a>
         <div class="col-span-full m-col-start-5 m-col-end-10 xl-col-sta6rt- xl-col-end-9" id="footername">Grace Gesalan</div>
         <div class="col-span-full m-col-start-2 m-col-end-12 xl-col-start-5 xl-col-end-9" id="footerrights">© 2023All Rights Reserved. Design & Coded with Caffeine and Beats</div>
     </footer>
