--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,10 @@
 <body>
     <header id="main-header" class="grid-con">
         <h1 class="hidden">Apple Grace Gesalan</h1>
-        <img src="images/logo.svg" class="col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3" id="logo">
+
+        <a href="index.html" class="col-start-1 col-end-2 m-col-start-2 m-col-end-3 xl-col-start-2 xl-col-end-3">
+            <img src="images/logo.svg"  id="logo">
+        </a>
         <div class="m-col-start-3 m-col-end-9 xl-col-start-3 xl-col-end-6" id="name">
             <h2>Grace Gesalan | Canada</h2>
         </div>
@@ -28,7 +31,7 @@
             <p><a href="about.html" id="aboutlink">About</a></p>
         </div>
         <div class="m-col-start-10 m-col-end-11 xl-col-start-10 xl-col-end-11" id="portfolionav">
-            <p><a href="#gallery">Portfolio</a></p>
+            <p><a href="index.html">Portfolio</a></p>
         </div>
         <div class="m-col-start-11 m-col-end-12 xl-col-start-11 xl-col-end-12" id="contactnav">
             <p><a>Contact</a></p>
@@ -66,9 +69,11 @@
     </main>
     <footer class="grid-con" id="footer">
         <h2 class="hidden">Footer</h2>
-        <div class="col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" id="footerlogo">
-            <img src="images/logo.svg"></image>
-        </div>
+        <a href="#main-header" class="col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" >
+            <div id="footerlogo">
+                <img src="images/logo.svg"></image>
+            </div>
+        </a>
         <div class="col-span-full m-col-start-5 m-col-end-10 xl-col-sta6rt- xl-col-end-9" id="footername">Grace Gesalan</div>
         <div class="col-span-full m-col-start-2 m-col-end-12 xl-col-start-5 xl-col-end-9" id="footerrights">© 2023All Rights Reserved. Design & Coded with Caffeine and Beats</div>
     </footer>
