--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <script defer type="module" src ="js/main.js"></script>
     <script defer type="module" src ="js/gallery.js"></script>
+    <script defer type="module" src ="js/smoothscroll.js"></script>
 
 </head>
 
@@ -128,7 +129,11 @@
 
         <section id="slogan" class="grid-con">
             <h2 class="hidden">Building Tomorrow</h2>
-            <div class="col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-11" id="dedication">BUILDING TOMORROW WITH UNYIELDING DEDICATION</div>
+
+            <div class="col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-11" id="dedication">
+                BUILDING TOMORROW WITH UNYIELDING DEDICATION
+                
+            </div>
         </section>
 
         <section id="insights" class="grid-con">
