--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 
     <link href="css/grid.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <script defer type="module" src ="js/burger.js"></script>
 </head>
 <body>
     <header id="main-header" class="grid-con">
@@ -37,6 +38,18 @@
         </div>
         <div class="m-col-start-11 m-col-end-12 xl-col-start-11 xl-col-end-12" id="contactnav">
             <p><a href="contact.html" id="contactlink">Contact</a></p>
+        </div>
+
+        <div class="col-start-4 col-end-5" id="burger">
+            <!-- <img src="images/burger.svg"> -->
+            <button class="hamburger"></button>
+            <nav>
+                <ul class="menu">
+                    <li><a class="menuItem">ABOUT</a></li>
+                    <li><a class="menuItem">PORTFOLIO</a></li>
+                    <li><a class="menuItem">CONTACT</a></li>
+                </ul>
+            </nav>
         </div>
         
         <img src="images/burger.svg" class="col-start-4 col-end-5" id="burger">
