--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script defer type="module" src ="js/main.js"></script>
     <script defer type="module" src ="js/gallery.js"></script>
     <script defer type="module" src ="js/smoothscroll.js"></script>
+    <script defer type="module" src ="js/burger.js"></script>
 
 </head>
 
@@ -40,6 +41,18 @@
             </div>
             <div class="m-col-start-11 m-col-end-12 xl-col-start-11 xl-col-end-12" id="contactnav">
                 <p><a href="contact.html" id="contactlink">Contact</a></p>
+            </div>
+
+            <div class="col-start-4 col-end-5" id="burger">
+                <!-- <img src="images/burger.svg"> -->
+                <button class="hamburger"></button>
+                <nav>
+                    <ul class="menu">
+                        <li><a class="menuItem">ABOUT</a></li>
+                        <li><a class="menuItem">PORTFOLIO</a></li>
+                        <li><a class="menuItem">CONTACT</a></li>
+                    </ul>
+                </nav>
             </div>
         
         <img src="images/burger.svg" class="col-start-4 col-end-5" id="burger">
