--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </a>
             </div>
 
-            <div class="col-span-full m-col-start-4 m-col-end-11 xl-col-start-5 xl-col-end-11 text2" >Formula 1 </div>
+            <div class="col-span-full m-col-start-4 m-col-end-11 xl-col-start-4 xl-col-end-11 text2" >Formula 1 </div>
 
             <div class="projects col-span-full m-col-start-2 m-col-end-12 xl-col-start-2 xl-col-end-12" id="gal2">
                 <a href="#lightbox" data-img="img2">
@@ -151,7 +151,7 @@
 
         <section id="insights" class="grid-con">
             <h2 class="hidden">Insights About Me</h2>
-            <div class="col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="about">Insights About Me</div>
+            <div class="col-span-full m-col-start-4 m-col-end-10 xl-col-start-4 xl-col-end-10" id="about"><a>Insights About Me</a></div>
             <div class="col-span-full m-col-start-2 m-col-end-6 xl-col-start-2 xl-col-end-6" id="myphoto">
                 <img
                 sizes="(max-width: 1920px) 100vw, 1920px"
@@ -203,7 +203,7 @@
     <footer class="grid-con" id="footer">
         <h2 class="hidden">Footer</h2>
         <div class="col-start-2 col-end-4 m-col-start-6 m-col-end-8 xl-col-start-6 -xl-col-end-8" id="footerlogo">
-            <img src="images/logo.svg"></image>
+            <a href="#main-header"><img src="images/logo.svg"></image></a>
         </div>
         <div class="col-span-full m-col-start-5 m-col-end-10 xl-col-sta6rt- xl-col-end-9" id="footername">Grace Gesalan</div>
         <div class="col-span-full m-col-start-2 m-col-end-12 xl-col-start-5 xl-col-end-9" id="footerrights">© 2023All Rights Reserved. Design & Coded with Caffeine and Beats</div>
@@ -223,10 +223,6 @@
                 <p>2023</p>
             </div>
         </article>
-
-        
-
-
 
     </section>
 
