--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
     <link href="css/grid.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-    <script src="js/main.js"></script>
+    <script defer type="module" src="js/main.js"></script>
     <script defer type="module" src ="js/burger.js"></script>
 </head>
 <body>
