--- a/casestudy.html
+++ b/casestudy.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col-span-full xl-col-start-6 xl-col-end-12 m-col-start-7 m-col-end-12" id="objective">
                 <h3>OBJECTIVE</h3>
-                <p>Develop a groundbreaking earbud model that not only stands out in the market but also prioritizes user-centric design principles and incorporates the latest advancements in cutting-edge technology.  expand this sentence more</p>
+                <p>Develop a groundbreaking earbud model that not only stands out in the market but also prioritizes user-centric design principles and incorporates the latest advancements in cutting-edge technology.</p>
             </div>
             <div class="col-span-full xl-col-start-2 xl-col-end-12  m-col-start-2 m-col-end-12" id="approach">
                 <h3>APPROACH</h3>
