--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <script defer type="module" src ="js/main.js"></script>
     <script defer type="module" src ="js/gallery.js"></script>
-    <script defer type="module" src ="js/smoothscroll.js"></script>
+    <script defer type="module" src ="js/scroll.js"></script>
     <script defer type="module" src ="js/burger.js"></script>
 
 </head>
@@ -216,7 +216,7 @@
 
         <article>
           
-            <img src="images/earbuds_pyderl_c_scale,w_1376.jpg" class="lightboximg" alt="Project Image">
+            <a href="casestudy.html"><img src="images/earbuds_pyderl_c_scale,w_1376.jpg" class="lightboximg" alt="Project Image"></a>
             <div>
                 <h3 class="lb_heading">Saba Earbuds</h3>
                 <p>Cinema 4D</p>
